--- a/classone.ipynb
+++ b/classone.ipynb
@@ -6,7 +6,9 @@
       "name": "classone.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOnVNcQhEwj8AxxvytxdD/m",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,6 +19,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/deepgohil/D-Science/blob/main/classone.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": 1,
@@ -515,10 +527,34 @@
     {
       "cell_type": "code",
       "source": [
+        "for i in str:\n",
+        "  print(i,end=\" \")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XF4wyUgJpyzO",
+        "outputId": "5ffb2990-c479-4f5e-c296-73c0dd1f2f47"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "D e e p c o d i n "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "XF4wyUgJpyzO"
+        "id": "-r2ADvE6uZwW"
       },
       "execution_count": null,
       "outputs": []
