--- a/classone.ipynb
+++ b/classone.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOnVNcQhEwj8AxxvytxdD/m",
+      "authorship_tag": "ABX9TyNBbVtEO4xBzqhrQzum9OL/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -551,13 +551,60 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "for i in range(6):\n",
+        "  \n",
+        "  if i==1:\n",
+        "    break\n",
+        "  print(i)\n"
       ],
       "metadata": {
-        "id": "-r2ADvE6uZwW"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-r2ADvE6uZwW",
+        "outputId": "7de11468-02a6-4b60-c689-ae0deedb02b7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(6):\n",
+        "  \n",
+        "  if i==1:\n",
+        "    continue\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "D7PWtTgVxXny",
+        "outputId": "fcf38ca6-b64c-4060-9c8c-8b161f825f70"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n"
+          ]
+        }
+      ]
     }
   ]
 }
