--- a/classone.ipynb
+++ b/classone.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNBbVtEO4xBzqhrQzum9OL/",
+      "authorship_tag": "ABX9TyPuXBPSPfN2d/b3LO9maYmf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -579,7 +579,6 @@
       "cell_type": "code",
       "source": [
         "for i in range(6):\n",
-        "  \n",
         "  if i==1:\n",
         "    continue\n",
         "  print(i)"
@@ -605,6 +604,55 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##tuple\n",
+        "##Tuple ( )\n",
+        "##->Heterogeneous possible\n",
+        "##->Immutable\n",
+        "##->scriptable\n"
+      ],
+      "metadata": {
+        "id": "M26-65s_7C0t"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "t={1,2,3,4,56}\n",
+        "list=[1,3,2,6,{1,2,3,4}]\n",
+        "print(list)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pIUXV0R869y7",
+        "outputId": "d2a6c28c-3d0f-434c-faef-94ee213b7479"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 3, 2, 6, {1, 2, 3, 4}]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "oJEm3KJS7Bsp"
+      }
     }
   ]
 }
