--- a/classone.ipynb
+++ b/classone.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPuXBPSPfN2d/b3LO9maYmf",
+      "authorship_tag": "ABX9TyPfzzcKEhMdvcCALS8AtB5V",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -65,7 +65,7 @@
         "id": "ptvF8iewdAWd",
         "outputId": "b79fdcbb-6973-48c8-c1fd-eee0371affa0"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -93,7 +93,7 @@
         "id": "O8gLinPKdkCg",
         "outputId": "93817e1f-c804-4714-da00-1ae2fb46e7cf"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -122,7 +122,7 @@
         "id": "uD7g_HRRdpS7",
         "outputId": "4575fa75-cfe5-4451-d5b9-15f561ebe486"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -149,7 +149,7 @@
         "id": "WDazLuJ5eQHn",
         "outputId": "6f29608a-b0ef-4dbf-8504-9ca431fe750b"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -175,7 +175,7 @@
         "id": "Q0dX6mJrdsib",
         "outputId": "93f6ccc5-dcce-4881-a6db-584cca8a772e"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -198,7 +198,7 @@
         "id": "UBBUOemidxsh",
         "outputId": "8b4568d4-e0a3-474d-fb76-3da115badc39"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,7 +222,7 @@
         "id": "YUSf1TmAeFhM",
         "outputId": "86320736-9e6e-421b-ae71-3a383a9343fe"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -246,7 +246,7 @@
         "id": "kQlY_UFxeqFH",
         "outputId": "d4b31496-846e-43fa-b10e-9b9fd5ec75bf"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -269,7 +269,7 @@
       "metadata": {
         "id": "-WEIH3Lfe4kU"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -286,7 +286,7 @@
         "id": "dd_EqI99e8yR",
         "outputId": "cdd1c5c7-9292-41cf-c175-4e2896b50200"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -313,7 +313,7 @@
         "id": "wssPX4ahfKAh",
         "outputId": "bfe4ca8c-7682-4794-cb7c-ddcb511b4fde"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -348,7 +348,7 @@
         "id": "F2KXg4OChTwA",
         "outputId": "aed154b9-65a6-4563-90d9-7dd9a456a4ae"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -384,7 +384,7 @@
         "id": "SqDW-ocWhm8S",
         "outputId": "b127a4b6-da5c-4e18-d9ae-b998d0c4a9f0"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -410,7 +410,7 @@
       "cell_type": "code",
       "source": [
         "\n",
-        "//https://www.hackerrank.com/challenges/py-if-else/problem?isFullScreen=true\n",
+        "#//https://www.hackerrank.com/challenges/py-if-else/problem?isFullScreen=true\n",
         "n=143\n",
         "if(n%2==0):\n",
         "  if(n>2 and n<5):\n",
@@ -429,13 +429,45 @@
         "id": "ki01WLymiJ8l",
         "outputId": "61192acf-9a2e-4f41-a9ba-ff5af4b33828"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Weird\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#///////////////prime number\n",
+        "i=int(input())\n",
+        "flag=\"prime\"\n",
+        "start=2\n",
+        "while(start*start<=i):\n",
+        "  if(i%start==0):\n",
+        "    flag=\"composite\"\n",
+        "  start+=1\n",
+        "print(flag)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a9djvOLTzuCZ",
+        "outputId": "eff98bf0-860e-4520-8e99-a460f7791530"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "13\n",
+            "prime\n"
           ]
         }
       ]
@@ -449,6 +481,74 @@
       "metadata": {
         "id": "dLT5QdNsml_6"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#####################fibbo series\n",
+        "i=int(input())\n",
+        "a,b,c=0,1,0\n",
+        "while(i):\n",
+        "  print(a)\n",
+        "  c=a+b\n",
+        "  a=b\n",
+        "  b=c\n",
+        "  i-=1\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0BA1_Y1J082x",
+        "outputId": "00137f0a-0270-40b6-b18d-8eb9614b12a5"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6\n",
+            "0\n",
+            "1\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "####################digits in number\n",
+        "i=int(input())\n",
+        "digit=0\n",
+        "while(i>=1):\n",
+        "  i=i/10\n",
+        "  digit+=1\n",
+        "print(digit)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "y36Ib8-y2FDL",
+        "outputId": "f67b759b-16e4-43c9-b9f6-092801ba35ad"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "378\n",
+            "3\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -473,7 +573,7 @@
         "id": "Xp6L_t8nm4Fv",
         "outputId": "eb47b9b4-0a0c-4649-9e01-1b139ac67c8e"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -507,7 +607,7 @@
         "id": "zTLImuwhpTjV",
         "outputId": "eb7d3195-36ab-4057-9967-6dbe69b24035"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -537,7 +637,7 @@
         "id": "XF4wyUgJpyzO",
         "outputId": "5ffb2990-c479-4f5e-c296-73c0dd1f2f47"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -564,7 +664,7 @@
         "id": "-r2ADvE6uZwW",
         "outputId": "7de11468-02a6-4b60-c689-ae0deedb02b7"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -590,7 +690,7 @@
         "id": "D7PWtTgVxXny",
         "outputId": "fcf38ca6-b64c-4060-9c8c-8b161f825f70"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -634,7 +734,7 @@
         "id": "pIUXV0R869y7",
         "outputId": "d2a6c28c-3d0f-434c-faef-94ee213b7479"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -642,6 +742,59 @@
           "text": [
             "[1, 3, 2, 6, {1, 2, 3, 4}]\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#dict\n",
+        "#ordered\n",
+        "#no duplicate\n",
+        "#mutable\n",
+        "#indexed"
+      ],
+      "metadata": {
+        "id": "7BhzhZe98tgI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "info={\n",
+        "    \"name\":\"Deep\",\n",
+        "    \"age\":\"17\",\n",
+        "    \"location\":\"mumbai\",\n",
+        "    \"name\":\"Deep\",\n",
+        "    \"age\":\"17\",\n",
+        "    \"location\":\"mumbai\",\n",
+        "    \"education\":[\"svp\",\"gp mumbai\"]\n",
+        "}\n",
+        "#value based indexing\n",
+        "info[\"education\"][0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "81691THN8unf",
+        "outputId": "b7ea64b1-21bf-403c-c027-cd6acb37906b"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'svp'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
         }
       ]
     },
