--- a/classone.ipynb
+++ b/classone.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPfzzcKEhMdvcCALS8AtB5V",
+      "authorship_tag": "ABX9TyPkqKTV8kK3AD8CiR+lC82g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -799,6 +799,32 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "info.keys()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PUx86SsR_oH1",
+        "outputId": "ee4a8041-a343-4a39-c4c1-25e0d34ae180"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_keys(['name', 'age', 'location', 'education'])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         ""
@@ -806,6 +832,219 @@
       "metadata": {
         "id": "oJEm3KJS7Bsp"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in info.values():\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dv0UscBY_ugG",
+        "outputId": "0a0f7907-1365-45d5-ae70-da64b9edffcb"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Deep\n",
+            "17\n",
+            "mumbai\n",
+            "['svp', 'gp mumbai']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in info.keys():\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2Ot_3b3j_067",
+        "outputId": "9c2b817c-3f9b-4c81-f9f5-393563e3f2b3"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "name\n",
+            "age\n",
+            "location\n",
+            "education\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i,j in info.items():\n",
+        "  print(i,j)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nFvD6Vac_-3R",
+        "outputId": "53e0cef4-afaf-4e21-cc94-b1ce7b072ff5"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "name Deep\n",
+            "age 17\n",
+            "location mumbai\n",
+            "education ['svp', 'gp mumbai']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in info:\n",
+        "  print(i[0],j[1])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OL9W-3KxAG3y",
+        "outputId": "8caab45f-0d67-44d9-d8ea-befb427b3d0f"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "n gp mumbai\n",
+            "a gp mumbai\n",
+            "l gp mumbai\n",
+            "e gp mumbai\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mydict={}\n",
+        "for i in range(1,6):\n",
+        "  mydict[i]=i*i\n",
+        "\n",
+        "mydict"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1UPNiAM6Au6o",
+        "outputId": "cb556128-836b-418b-9db8-11ff1c85cbab"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{1: 1, 2: 4, 3: 9, 4: 16, 5: 25}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "  ksum=0\n",
+        "  vsum=0\n",
+        "  k=0\n",
+        "  for i,j in mydict.items():\n",
+        "    ksum=i+ksum\n",
+        "    vsum=j+vsum\n",
+        "    k+=1\n",
+        "  print(ksum)\n",
+        "  print(vsum)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ihk3cBBYB-jg",
+        "outputId": "c825fee5-de91-402b-9891-4c366837e313"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "15\n",
+            "55\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ans=sum(mydict.values())\n",
+        "ans"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jkgEjEFKDPwO",
+        "outputId": "633a65a4-f98c-40c1-b2cf-a56db33880d2"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "55"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#oops\n",
+        "class baap:\n",
+        "  def __init__(self,age):\n",
+        "    self.age=age\n",
+        "\n",
+        "    "
+      ],
+      "metadata": {
+        "id": "G49UsEOAFxQ2"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
