--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -6,7 +6,7 @@
       "name": "numpy.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMqYwUdkNN5xaP8k8D2wELQ",
+      "authorship_tag": "ABX9TyPHGwNWZjy2FkkzJoS4VxNk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "0NxE4opwNCLf"
       },
@@ -38,6 +38,246 @@
       "source": [
         "import numpy as np"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr=np.array([1,2,3,4,5,6,7])\n",
+        "arr"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aADAv8haQ7wR",
+        "outputId": "654d72c3-0f8a-4854-a92d-e9a42e777ecd"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 2, 3, 4, 5, 6, 7])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(arr)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CvIKcyWJRBeI",
+        "outputId": "9405c487-59d0-48e6-eed9-c61ea643e4c1"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "numpy.ndarray"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr.ndim"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0Lra11b2RFCO",
+        "outputId": "2604306f-99ef-45c9-b0c4-870c8822b3fd"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr=np.array([1,2,3,4,5,6,7],\"uint64\")"
+      ],
+      "metadata": {
+        "id": "2FrmVqEpRbHd"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr.dtype"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Lamy5GneRhcH",
+        "outputId": "eee3fd28-3db4-41bc-91b8-f8d36eb616fd"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dtype('uint64')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr=np.ones(10000,dtype=\"uint64\")"
+      ],
+      "metadata": {
+        "id": "kkKlZecPSGWO"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lst = [1]*10000"
+      ],
+      "metadata": {
+        "id": "-0e9aUXoRtV0"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "QOlkSmITSUVY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#time\n"
+      ],
+      "metadata": {
+        "id": "F1A2h2NzSWFF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%timeit sum(lst)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Vwil6A6oSZud",
+        "outputId": "fd0b4f0f-14d6-46af-eccb-346c22dd5670"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10000 loops, best of 5: 74 µs per loop\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%timeit arr.sum()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NhTzYrweSdnw",
+        "outputId": "7bded758-caa3-4f28-adbf-c0b9b3700b29"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The slowest run took 9.85 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+            "100000 loops, best of 5: 9.78 µs per loop\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%timeit sum(arr)\n",
+        "#python no function call"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_mhfTY5eSidi",
+        "outputId": "0f5d3456-d523-4f15-f4c4-0fe10ba2c7f5"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "100 loops, best of 5: 2.31 ms per loop\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "W6ec0nhPSvlz"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
